--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-toastify": "^6.0.9",
+    "styled-components": "^5.2.0",
+    "@unform/web": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,6 +31,16 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "development": [
+    "last 1 chrome version",
+    "last 1 firefox version",
+    "last 1 safari version"
+  ],
+  "devDependencies": {
+    "@types/react-input-mask": "^2.0.5",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.3"
   },
   "browserslist": {
     "production": [
